[project]
name = "dirkeeper"
version = "0.1.0"
description = "An MCP Server for 389 Directory Server interactions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.6.0",
    "lib389",
]

[tool.uv]
index-url = "https://test.pypi.org/simple/"
extra-index-url = ["https://pypi.org/simple/"]
